# CPlus-palette

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  compile_commands.json  cpluspallet
HEADERS/: adv_color.h  cluster.h  color.h  k_mean.h  loadAndSelect.h  median_cut.h  median_cut_helpers.h
src/: cluster.cpp  cluster.h  color.cpp  color.h  colorGen.cpp  colorGen.h  colors.cpp  colors.h  dataTypes.cpp  dataTypes.h  kmean.cpp  kmean.h  main.cpp  median_cut.cpp  median_cut.h  quantizer.cpp  quantizer.h
src/COMMON/: LoadAndSelect.cpp  color.cpp
src/K_MEAN/: adv_color.cpp  cluster.cpp  k_mean.cpp
src/MEDIAN_CUT/: median_cut.cpp  median_cut_helpers.cpp
src/common/: LoadAndSelect.cpp  color.cpp  util.cpp
src/includes/: adv_color.h  cluster.h  color.h  cuda_cluster.h  k_mean.h  k_mean_cuda.h  median_cut.h  median_cut_helpers.h  oct_tree.h  oct_tree_node.h  util.h
src/kmean/: adv_color.cpp  cluster.cpp  k_mean.cpp  k_mean.cu
src/kmean/cuda/: cuda_cluster.cu  k_mean.cu
src/mediancut/: median_cut.cpp  median_cut_helpers.cpp
src/octtree/: oct_tree.cpp  oct_tree_node.cpp
